flicker fix for large screens

--- a/css/style.css
+++ b/css/style.css
@@ -543,7 +543,7 @@ i.insta:hover {
 @media (max-width:1024px){
 .banner-info h2 {
   width: 58%;
-  font-size:4em;
+  font-size:2em;
 }
 .banner-info h3 {
   width: 60%;
